--- a/EvaluacionP1_BurgaMartin/Views/Home/Index.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Sistema de reservas</h1>
+    <img src="./Resources/images.jpg" alt="Venimos por sillas para 2b" style="width: 400px; height: 500px;"> />
+
 </div>
