--- a/EvaluacionP1_BurgaMartin/Views/Cliente/Delete.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Cliente/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model EvaluacionP1_BurgaMartin.Models.Cliente
 
 @{
-    ViewData["Title"] = "Detalles";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Detalles</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
@@ -35,8 +36,9 @@
             @Html.DisplayFor(model => model.Monto)
         </dd>
     </dl>
-</div>
-<div>
-    @Html.ActionLink("Edit", "Edit", { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
