--- a/EvaluacionP1_BurgaMartin/Views/Home/Index.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Home/Index.cshtml
@@ -4,6 +4,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Sistema de reservas</h1>
-    <img src="./Resources/images.jpg" alt="Venimos por sillas para 2b" style="width: 400px; height: 500px;"> />
-
+    <div class="text-center">
+        <img src="./Resources/images.jpg" alt="Venimos por sillas para 2b" style="width: 400px; height: 500px;" />
+        <div>
+            <button type="button" class="btn btn-primary">Aboutme</button>
+        </div>
+    </div>
 </div>
