--- a/EvaluacionP1_BurgaMartin/Views/Home/Index.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="text-center">
         <img src="./Resources/images.jpg" alt="Venimos por sillas para 2b" style="width: 400px; height: 500px;" />
         <div>
-            <button type="button" class="btn btn-primary">Aboutme</button>
+            <button type="button" class="btn btn-outline-primary">aboutMe</button>
         </div>
     </div>
 </div>
