--- a/EvaluacionP1_BurgaMartin/Views/Shared/_Layout.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Detalles">Cliente</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Create">Crear Cliente</a>
+                        </li>
                     </ul>
                 </div>
             </div>
