--- a/EvaluacionP1_BurgaMartin/Views/Clientes/Delete.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Clientes/Delete.cshtml
@@ -12,12 +12,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
         <dd class = "col-sm-10">
@@ -30,6 +24,12 @@
             @Html.DisplayFor(model => model.PagoRealizado)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.FechaPago)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.FechaPago)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Monto)
         </dt>
         <dd class = "col-sm-10">
@@ -38,6 +38,7 @@
     </dl>
     
     <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
