--- a/EvaluacionP1_BurgaMartin/Views/Clientes/Edit.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Clientes/Edit.cshtml
@@ -12,11 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -26,6 +22,11 @@
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="PagoRealizado" /> @Html.DisplayNameFor(model => model.PagoRealizado)
                 </label>
+            </div>
+            <div class="form-group">
+                <label asp-for="FechaPago" class="control-label"></label>
+                <input asp-for="FechaPago" class="form-control" />
+                <span asp-validation-for="FechaPago" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Monto" class="control-label"></label>
@@ -43,3 +44,6 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
