Adicion de botones boostrap para cada seccion de crear, editar, eliminar etc y bug fixes del layout

--- a/EvaluacionP1_BurgaMartin/Views/Shared/_Layout.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Detalles">Cliente</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Create">Crear Cliente</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Create">Crear Cliente</a>
                         </li>
                     </ul>
                 </div>
