--- a/EvaluacionP1_BurgaMartin/Views/Clientes/Delete.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Clientes/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Estas seguro de eliminar?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.Monto)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <button type="submit" class="btn btn-danger">Eliminar</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
