Adicion de atajos de "Reservas" y "Plan de recompensas" en los cuales hay conflicto con la BD. Se solucionarà en futuras versiones :c

--- a/EvaluacionP1_BurgaMartin/Views/Shared/_Layout.cshtml
+++ b/EvaluacionP1_BurgaMartin/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Create">Crear Cliente</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reservas" asp-action="Index">Reservas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PlanRecompensas" asp-action="Index">Plan de recompensas</a>
                         </li>
                     </ul>
                 </div>
